# graphy

./: .gitignore  1d_cplx_viewer.cpp  1d_cplx_viewer.h  1d_viewer.cpp  1d_viewer.h  2d_curve.cpp  2d_curve.h  2d_curveComplex.cpp  2d_curveComplex.h  2d_viewer.cpp  2d_viewer.h  3d_base.h  3d_cameraParams.cpp  3d_cameraParams.h  3d_cloud.cpp  3d_cloud.h  3d_customViewContainer.cpp  3d_customViewContainer.h  3d_label.cpp  3d_label.h  3d_light.cpp  3d_light.h  3d_object.cpp  3d_object.h  3d_objectLoader.cpp  3d_objectLoader.h  3d_shapes.cpp  3d_shapes.h  3d_viewer.cpp  3d_viewer.h  AppearanceDialog.cpp  AppearanceDialog.h  Base3D.h  BrushStyleComboBox.cpp  BrushStyleComboBox.h  CMakeLists.txt  Cloud.cpp  Cloud.h  ColorWheel.cpp  ColorWheel.hpp  (+114 more)
algorithmes/: Arun.cpp  Arun.h  Horn.cpp  Horn.h  Pivot.cpp  Pivot.h
datatest/: Gips.csv  map.csv  new.csv  sin.csv  test_2VarPolynome.csv  test_Field.csv  test_FieldDipole.csv  test_Hn.graphy  test_bode.csv  test_clin.csv  test_colourize.csv  test_complex_erf.graphy  test_complex_gamma.graphy  test_complex_theta.graphy  test_complex_zeta_xsi.graphy  test_complex_zeta_xsi_test.graphy  test_curve.csv  test_custom.graphy  test_cwise.graphy  test_data.csv  test_ellipse.csv  test_ellipsoid.graphy  test_fft.csv  test_fft_noise.csv  test_fitPolynome.csv  test_gaussian.csv  test_gips.csv  test_if.graphy  test_isPrime.csv  test_labels.csv  test_log.graphy  test_mandelbrot.csv  test_map.csv  test_noise.csv  test_plan.csv  test_rawDataAcces.graphy  test_sigmoid.csv  test_sinusoide.csv  test_solidHarmonics.graphy  test_solveNewton.graphy  (+5 more)
exprtk/: exprtk.hpp
qcustomplot/: qcustomplot.cpp  qcustomplot.h
release/: shortcuts.csv
shapes/: Circle2D.cpp  Circle2D.h  Circle3D.cpp  Circle3D.h  CustomExpression.cpp  CustomExpression.h  Ellipse2D.cpp  Ellipse2D.h  Ellipsoid.hpp  Gaussian.cpp  Gaussian.h  Impedances.hpp  Plan.hpp  Shape.hpp  Sigmoid.cpp  Sigmoid.h  Sinusoide.cpp  Sinusoide.h  Sinusoide.hpp  SolidHarmonicsDecomposition.cpp  SolidHarmonicsDecomposition.h  Sphere.hpp
single_application/: singleapplication.cpp  singleapplication.h  singleapplication_p.cpp  singleapplication_p.h
solidHarmonics/: solidHarmonics.cpp  solidHarmonics.h
